[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "blight"
version = "0.1.1"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # "opencv-python>=4.5.0", # Main OpenCV package
    # "numpy>=1.19.0",        # Required by OpenCV
    "typer>=0.9.0",  
    "rich>=13.0.0"          # Recommended for pretty output
]

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
blight = "blight.cli:app"