[package]
name = "rust_support"
version = "0.1.1"
edition = "2024"

[dependencies]
log = "0.4"
pretty_env_logger = "0.5.0"
# clap = { version = "4", features = ["derive"] }

[build-dependencies]  # 构建依赖节
cbindgen = "0.29.0"

[lib]
name = "rust_support"
crate-type = ["staticlib"]

# [package.metadata.wasm-pack.profile.release]
# wasm-features = ["atomics", "bulk-memory"]